Add some logic for BackupInteractor.kt, add constructor
Tag: #New

--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -95,10 +95,13 @@
 
     <!---->
 
-    <string name="pref_toast_melody_dialog_replace">
+    <string name="pref_toast_import_error">Sorry, but file is damaged! :(</string>
+    <string name="pref_toast_import_result">File successfully saved! Path: %s</string>
+
+    <string name="pref_toast_melody_replace">
         Sorry, we can\'t set selected melody! We replace it. :(
     </string>
-    <string name="pref_toast_melody_dialog_empty">
+    <string name="pref_toast_melody_empty">
         Sorry, you don\'t have any melodies! :(
     </string>
 
