--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -103,10 +103,13 @@
 
     <!---->
 
-    <string name="pref_toast_melody_dialog_replace">
+    <string name="pref_toast_import_error">Извините, но файл повреждён! :(</string>
+    <string name="pref_toast_import_result">Файл успешно сохранён! Путь: %s</string>
+
+    <string name="pref_toast_melody_replace">
         Извините, мы не смогли установить выбранную мелодию! Мы заменили её. :(
     </string>
-    <string name="pref_toast_melody_dialog_empty">
+    <string name="pref_toast_melody_empty">
         Извините, у вас нет ни одной мелодии! :(
     </string>
 
