Finish code for PreferenceViewModel.kt + add tests
Tag: #New #Test

--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -104,7 +104,10 @@
     <!---->
 
     <string name="pref_toast_import_error">Извините, но файл повреждён! :(</string>
-    <string name="pref_toast_import_result">Файл успешно сохранён! Путь: %s</string>
+    <string name="pref_toast_import_result">Данные успешно добавлены! :)</string>
+
+    <string name="pref_toast_export_result">Файл успешно сохранён!\nПуть: %s</string>
+    <string name="pref_toast_export_error">Произошла ошибка! Не удалось сохранить файл.</string>
 
     <string name="pref_toast_melody_replace">
         Извините, мы не смогли установить выбранную мелодию! Мы заменили её. :(
