--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -96,7 +96,10 @@
     <!---->
 
     <string name="pref_toast_import_error">Sorry, but file is damaged! :(</string>
-    <string name="pref_toast_import_result">File successfully saved! Path: %s</string>
+    <string name="pref_toast_import_result">Data successfully added! :)</string>
+
+    <string name="pref_toast_export_result">File successfully saved! Path: %s</string>
+    <string name="pref_toast_export_error">An error has occurred! Failed to save file.</string>
 
     <string name="pref_toast_melody_replace">
         Sorry, we can\'t set selected melody! We replace it. :(
