Add import skip preference
Tag: #New #Test

--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -13,6 +13,7 @@
 
     <string name="pref_title_backup_export">Сохранить данные в файл</string>
     <string name="pref_title_backup_import">Загрузить данные из файла</string>
+    <string name="pref_title_backup_import_skip">Пропускать одинаковые заметки</string>
 
     <string name="pref_title_note_sort">Сортировка заметок</string>
     <string name="pref_title_note_color">Цвет заметки по-умолчанию</string>
@@ -33,6 +34,11 @@
     <!---->
 
     <string name="pref_summary_app_theme">Выбранная тема</string>
+
+    <string name="pref_summary_backup_import_skip">
+        Если в приложении уже есть заметка с таким же именем и содержанием, то она не будет
+        добавлена при резервном копировании
+    </string>
 
     <string name="pref_summary_note_sort">Будет применяться по-умолчанию</string>
     <string name="pref_summary_note_color">Будет применяться по-умолчанию</string>
@@ -105,6 +111,9 @@
 
     <string name="pref_toast_import_error">Извините, но файл повреждён! :(</string>
     <string name="pref_toast_import_result">Данные успешно добавлены! :)</string>
+    <string name="pref_toast_import_result_skip">
+        Данные успешно добавлены! :)\nПропущено заметок: %d
+    </string>
 
     <string name="pref_toast_export_result">Файл успешно сохранён!\nПуть: %s</string>
     <string name="pref_toast_export_error">Произошла ошибка! Не удалось сохранить файл.</string>
