--- a/app/src/main/res/values/values_preference.xml
+++ b/app/src/main/res/values/values_preference.xml
@@ -5,6 +5,8 @@
 
     <integer name="pref_app_theme">0</integer>
 
+    <bool name="pref_backup_import_skip">true</bool>
+
     <integer name="pref_note_sort">0</integer>
     <integer name="pref_note_color">10</integer>
     <bool name="pref_note_save_pause">true</bool>
