--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -27,6 +27,13 @@
                 android:title="@string/pref_title_backup_import"
                 app:iconSpaceReserved="false"/>
 
+        <SwitchPreferenceCompat
+                android:defaultValue="@bool/pref_backup_import_skip"
+                android:key="@string/pref_key_backup_import_skip"
+                android:summary="@string/pref_summary_backup_import_skip"
+                android:title="@string/pref_title_backup_import_skip"
+                app:iconSpaceReserved="false"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/pref_header_note" app:iconSpaceReserved="false">
