--- a/app/src/main/res/values-ru/strings_dialog.xml
+++ b/app/src/main/res/values-ru/strings_dialog.xml
@@ -26,6 +26,8 @@
     <string name="dialog_add_text">Текст</string>
     <string name="dialog_add_roll">Список</string>
 
+    <string name="dialog_text_loading">Загрузка…</string>
+
     <string name="dialog_title_melody_permission">Требуется разрешение</string>
     <string name="dialog_text_melody_permission">
         Для того что бы использовать мелодии находящиеся на SD карте,
