--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -107,7 +107,7 @@
         Data successfully added! :)\nSkipped notes: %d
     </string>
 
-    <string name="pref_toast_export_result">File successfully saved! Path: %s</string>
+    <string name="pref_toast_export_result">File successfully saved!\nPath: %s</string>
     <string name="pref_toast_export_error">An error has occurred! Failed to save file.</string>
 
     <string name="pref_toast_melody_replace">
