--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -10,6 +10,8 @@
     <integer name="color_fade_time">200</integer>
     <integer name="color_transition_time">200</integer>
 
+    <integer name="recycler_roll_show_time">200</integer>
+
     <integer name="placeholder_fade_time">500</integer>
 
     <integer name="info_skip_time">0</integer>
