Add tinting of system ui (statusBar, navigationBar, windowBackground)

--- a/app/src/main/res/values-v21/styles_app.xml
+++ b/app/src/main/res/values-v21/styles_app.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--  Set colors of system UI not work from XML. This is for best understanding.  -->
     <style name="App.Light.UI">
         <item name="android:windowBackground">?attr/clBackgroundWindow</item>
 
         <item name="android:navigationBarColor">?attr/colorPrimaryDark</item>
     </style>
 
+    <!--  Set colors of system UI not work from XML. This is for best understanding.  -->
     <style name="App.Dark.UI">
         <item name="android:windowBackground">?attr/clBackgroundWindow</item>
 
