--- a/app/src/main/res/layout/activity_develop.xml
+++ b/app/src/main/res/layout/activity_develop.xml
@@ -1,113 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/develop_parent_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="sgtmelon.scriptum.presentation.screen.ui.impl.DevelopActivity">
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="sgtmelon.scriptum.presentation.screen.ui.impl.DevelopActivity">
-
-    <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.35">
+        android:layout_height="0dp"
+        android:layout_weight="0.35">
 
         <ProgressBar
-                android:id="@+id/develop_note_progress"
-                style="@style/ProgressBar.Develop"/>
+            android:id="@+id/develop_note_progress"
+            style="@style/ProgressBar.Develop" />
 
         <ScrollView
-                android:id="@+id/develop_note_scroll"
-                style="@style/Container.Develop.Scroll"
-                tools:visibility="visible">
+            android:id="@+id/develop_note_scroll"
+            style="@style/Container.Develop.Scroll"
+            tools:visibility="visible">
 
             <TextView
-                    android:id="@+id/develop_note_text"
-                    style="@style/Text.Develop"
-                    android:text="@string/preview_note_data_base"/>
+                android:id="@+id/develop_note_text"
+                style="@style/Text.Develop"
+                android:text="@string/preview_note_data_base" />
 
         </ScrollView>
 
     </FrameLayout>
 
-    <View style="@style/Divider.Horizontal"/>
+    <View style="@style/Divider.Horizontal" />
 
     <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.35">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.35">
 
         <ProgressBar
-                android:id="@+id/develop_roll_progress"
-                style="@style/ProgressBar.Develop"/>
+            android:id="@+id/develop_roll_progress"
+            style="@style/ProgressBar.Develop" />
 
         <ScrollView
-                android:id="@+id/develop_roll_scroll"
-                style="@style/Container.Develop.Scroll"
-                tools:visibility="visible">
+            android:id="@+id/develop_roll_scroll"
+            style="@style/Container.Develop.Scroll"
+            tools:visibility="visible">
 
             <TextView
-                    android:id="@+id/develop_roll_text"
-                    style="@style/Text.Develop"
-                    android:text="@string/preview_roll_data_base"/>
+                android:id="@+id/develop_roll_text"
+                style="@style/Text.Develop"
+                android:text="@string/preview_roll_data_base" />
 
         </ScrollView>
 
     </FrameLayout>
 
-    <View style="@style/Divider.Horizontal"/>
+    <View style="@style/Divider.Horizontal" />
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.3"
-            android:orientation="horizontal"
-            android:weightSum="1"
-            tools:ignore="NestedWeights">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.3"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        tools:ignore="NestedWeights">
 
         <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.6">
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.6">
 
             <ProgressBar
-                    android:id="@+id/develop_rank_progress"
-                    style="@style/ProgressBar.Develop"/>
+                android:id="@+id/develop_rank_progress"
+                style="@style/ProgressBar.Develop" />
 
             <ScrollView
-                    android:id="@+id/develop_rank_scroll"
-                    style="@style/Container.Develop.Scroll"
-                    tools:visibility="visible">
+                android:id="@+id/develop_rank_scroll"
+                style="@style/Container.Develop.Scroll"
+                tools:visibility="visible">
 
                 <TextView
-                        android:id="@+id/develop_rank_text"
-                        style="@style/Text.Develop"
-                        android:text="@string/preview_rank_data_base"/>
+                    android:id="@+id/develop_rank_text"
+                    style="@style/Text.Develop"
+                    android:text="@string/preview_rank_data_base" />
 
             </ScrollView>
 
         </FrameLayout>
 
-        <View style="@style/Divider.Vertical"/>
+        <View style="@style/Divider.Vertical" />
 
         <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.4">
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.4">
 
             <ProgressBar
-                    android:id="@+id/develop_preference_progress"
-                    style="@style/ProgressBar.Develop"/>
+                android:id="@+id/develop_preference_progress"
+                style="@style/ProgressBar.Develop" />
 
             <ScrollView
-                    android:id="@+id/develop_preference_scroll"
-                    style="@style/Container.Develop.Scroll"
-                    tools:visibility="visible">
+                android:id="@+id/develop_preference_scroll"
+                style="@style/Container.Develop.Scroll"
+                tools:visibility="visible">
 
                 <TextView
-                        android:id="@+id/develop_preference_text"
-                        style="@style/Text.Develop"
-                        android:text="@string/preview_preference"/>
+                    android:id="@+id/develop_preference_text"
+                    style="@style/Text.Develop"
+                    android:text="@string/preview_preference" />
 
             </ScrollView>
 
@@ -116,11 +116,11 @@
     </LinearLayout>
 
     <Button
-            android:id="@+id/develop_intro_button"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/button_show_intro"
-            android:textColor="?attr/clAccent"/>
+        android:id="@+id/develop_intro_button"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_show_intro"
+        android:textColor="?attr/clAccent" />
 
 </LinearLayout>
