--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,54 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/intro_parent_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:context=".presentation.screen.ui.impl.intro.IntroActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/intro_parent_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".presentation.screen.ui.impl.intro.IntroActivity">
 
     <androidx.viewpager.widget.ViewPager
-            android:id="@+id/intro_pager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:padding="@dimen/layout_8dp"
-            android:clipToPadding="false"
-            android:overScrollMode="never"/>
+        android:id="@+id/intro_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:padding="@dimen/layout_8dp" />
 
     <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/layout_4dp"
-            android:paddingLeft="@dimen/layout_4dp"
-            android:paddingEnd="@dimen/layout_4dp"
-            android:paddingRight="@dimen/layout_4dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/layout_4dp"
+        android:paddingLeft="@dimen/layout_4dp"
+        android:paddingEnd="@dimen/layout_4dp"
+        android:paddingRight="@dimen/layout_4dp">
 
-        <com.rd.PageIndicatorView
+        <!--  Need container for work properly (it's related with layout_gravity)  -->
+        <FrameLayout
+            android:id="@+id/intro_page_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/layout_1dp">
+
+            <com.rd.PageIndicatorView
                 android:id="@+id/intro_page_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="@dimen/layout_1dp"
-                android:layout_marginRight="@dimen/layout_1dp"
                 android:padding="@dimen/layout_8dp"
                 app:piv_animationType="worm"
                 app:piv_dynamicCount="true"
+                android:layout_gravity="center"
                 app:piv_interactiveAnimation="true"
                 app:piv_selectedColor="?attr/clContent"
                 app:piv_unselectedColor="?attr/clDisable"
-                app:piv_viewPager="@id/intro_pager"/>
+                app:piv_viewPager="@id/intro_pager" />
+
+        </FrameLayout>
 
         <Button
-                android:id="@+id/intro_end_button"
-                style="@style/Base.Widget.AppCompat.Button.Borderless"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/info_intro_button"
-                android:textColor="?attr/clAccent"/>
+            android:id="@+id/intro_end_button"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/info_intro_button"
+            android:textColor="?attr/clAccent" />
 
     </FrameLayout>
 
